[project]
name = "pycrane"
version = "0.1.0"
description = "Library for working with docker images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "bandit>=1.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "ruff>=0.8.0",
    "vulture>=2.13",
]
