[project]
name = "pycrane"
version = "0.1.0"
description = "Library for working with docker images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "www-authenticate>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "bandit>=1.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-randomly>=3.16.0",
    "ruff>=0.8.0",
    "vulture>=2.13",
    "types-requests>=2.32.0.20241016",
    "pycrane",
]

[tool.uv.sources]
pycrane = { workspace = true }

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 79
target-version = 'py311'
exclude = [
    '.git',
    '.venv*',
    '__pycache__',
    '__pypackages__',
    '.vscode',
    'build',
    'dist',
    '*egg-info*',
    'setup.py'
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "N", "A", "PL"]
[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
cache_dir = ".cache/mypy"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
[tool.coverage.run]
omit = ["tests/*"]
